# ChangeLog for net-misc/dahdi-tools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dahdi-tools/ChangeLog,v 1.10 2011/02/27 18:58:35 chainsaw Exp $

  27 Feb 2011; Tony Vroon <chainsaw@gentoo.org> dahdi-tools-2.4.0.ebuild:
  Mark stable on AMD64 for security bug #352059. Arch testing by Agostino "ago"
  Sarubbo.

  27 Feb 2011; Tony Vroon <chainsaw@gentoo.org> dahdi-tools-2.4.0.ebuild:
  USE=ppp should DEPEND on net-dialup/ppp. As pointed out by Agostino "ago"
  Sarubbo in bug #352059.

  26 Feb 2011; Thomas Kahle <tomka@gentoo.org> dahdi-tools-2.4.0.ebuild:
  x86 stable per bug 352059

*dahdi-tools-2.4.0 (14 Sep 2010)

  14 Sep 2010; <chainsaw@gentoo.org> +dahdi-tools-2.4.0.ebuild:
  Updated ebuild by Jaco Kroon, closes bug #337280. Updated linux-headers
  depend to avoid build failure reported by Diego E. "Flameeyes" Pettenò in
  bug #336430.

*dahdi-tools-2.3.0 (25 May 2010)

  25 May 2010; <chainsaw@gentoo.org> +dahdi-tools-2.3.0.ebuild:
  Version bump, with many thanks to Oliver Jaksch, Stefan Knoblich & Jaco
  Kroon for research, patching & testing in bug #321353. Dependency on
  dev-libs/newt closes bug #307095 by Jaco Kroon.

  22 Dec 2009; <chainsaw@gentoo.org> dahdi-tools-2.2.0-r1.ebuild:
  I have stopped entertaining the notion that the 2.6.28-r1 linux-headers
  are usable.

*dahdi-tools-2.2.0-r1 (22 Dec 2009)

  22 Dec 2009; <chainsaw@gentoo.org> -dahdi-tools-2.2.0.ebuild,
  +dahdi-tools-2.2.0-r1.ebuild,
  +files/dahdi-tools-2.2.0-no-hardware-fiddling.patch,
  +files/dahdi-tools-2.2.0-vendorlib.patch:
  Install in perl vendor directory, not site as per bug #295105. Explicitly
  block zaptel as per bug #295107 (both by Diego E. "Flameeyes" Pettenò).
  Work around Gentoo-specific broken linux headers, closes bug #290918 by
  Chí-Thanh Christopher Nguyễn. Do not fiddle with the hardware in the
  Makefile, closes bug #296359 by Jaco Kroon.

*dahdi-tools-2.2.0 (28 Oct 2009)
