@@ -1,0 +1,36 @@
+# Global settings
+# Set this to your country code.
+DAHDI_ZONE=za
+DAHDI_ECHOCAN=oslec # mg2,jpah,kb1,sec,sec2 (there may be more, we recommend oslec)
+
+# Settings for analog
+#Analog signal types, one of:
+# ks - KewlStart (recommended, default)
+# ls - LoopStart
+# gs - GroundStart
+
+# Signalling to be used on FXO ports
+DAHDI_FXO_SIGNALLING=ks
+
+# Signalling to be used on FXS ports
+DAHDI_FXS_SIGNALLING=ks
+
+# Whether or not to echocan:
+DAHDI_FXO_ECHOCAN=yes
+DAHDI_FXS_ECHOCAN=yes
+
+# These settings will be used for BRI cards.
+# Known options: B8ZS,AMI,HDB3
+DAHDI_BRI_CODING=AMI
+
+# Known options: ESF,D4,CCS,CRC4
+DAHDI_BRI_FRAMING=CCS
+
+# Our experience is that it's not required (still defaults to yes)
+DAHDI_BRI_NT_ECHOCAN=no
+DAHDI_BRI_TE_ECHOCAN=no
+
+# PRI (E1/T1) not currently supported.
+# If you have a card that gets loaded but not configured please file a bug on
+# bugs.gentoo.org and add jaco@uls.co.za as a CC.  Please do attach the the
+# output of "dahdi_scan" to us.
