@@ -1,6 +1,16 @@
 # ChangeLog for net-misc/dahdi-tools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dahdi-tools/ChangeLog,v 1.10 2011/02/27 18:58:35 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dahdi-tools/ChangeLog,v 1.11 2011/04/21 12:16:34 chainsaw Exp $
+
+*dahdi-tools-2.4.1 (21 Apr 2011)
+
+  21 Apr 2011; Tony Vroon <chainsaw@gentoo.org> +dahdi-tools-2.4.1.ebuild,
+  +files/dahdi-autoconf.conf, +files/dahdi-autoconf.init:
+  Maintenance release, adds support for kernels up to 2.6.38 and increases
+  compatibility with systems that can not support read-line multiple PCI
+  commands. Additional initscripts by Jaco Kroon, closes bug #328143. Compile &
+  install additional binaries, also by Jaco Kroon, closes bug #337472. With
+  thanks to Oliver Jaksch for alerting me to the new version in bug #357311.
 
   27 Feb 2011; Tony Vroon <chainsaw@gentoo.org> dahdi-tools-2.4.0.ebuild:
   Mark stable on AMD64 for security bug #352059. Arch testing by Agostino "ago"
